k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usagemeterportal
  namespace: usagemeterportal
  labels:
    app: usagemeterportal
spec:
  type: ClusterIP
  selector:
    app: usagemeterportal
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
